feature: resolve users
